docs/k8s/examples/elk8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      #securityContext:
      #  runAsUser: 0
      containers:
        - name: elasticsearch
          image: registry.xuyh.info/elasticsearch/elasticsearch@sha256:dabfecf24c417af77a9daed847c695117ecb3d2c185bf9b0017ae49d2bb1abb6
          volumeMounts:
            - name: config
              mountPath: /usr/share/elasticsearch/config
            - name: data
              mountPath: /usr/share/elasticsearch/data
            - name: plugins
              mountPath: /usr/share/elasticsearch/plugins
            - name: logs
              mountPath: /usr/share/elasticsearch/logs
          ports:
            - containerPort: 9200
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: elasticsearch-config-nfs-pvc
        - name: data
          persistentVolumeClaim:
            claimName: elasticsearch-data-nfs-pvc
        - name: plugins
          persistentVolumeClaim:
            claimName: elasticsearch-plugins-nfs-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: elasticsearch-logs-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-svc
  labels:
    tms: elasticsearch-svc
spec:
  ports:
    - port: 9200
      protocol: TCP
  selector:
    app: elasticsearch
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - elasticsearch-svc
      secretName: elasticsearch-ingress-secret
  rules:
    - host: elasticsearch-svc
      http:
        paths:
          - backend:
              service:
                name: elasticsearch-svc
                port:
                  number: 9200
            path: /
            pathType: Prefix
